--- a/styles.css
+++ b/styles.css
@@ -83,12 +83,8 @@
 .path-mod-hsuforum .subscribertable tr td.potential {width:42%;}
 
 /** Styles for discuss.php **/
-#page-mod-hsuforum-discuss .discussioncontrols {width:100%;margin:5px;}
-#page-mod-hsuforum-discuss .discussioncontrols .discussioncontrol {width:33%;float:left;}
-#page-mod-hsuforum-discuss .discussioncontrol.exporttoportfolio {text-align:left;}
-#page-mod-hsuforum-discuss .discussioncontrol.displaymode {text-align:center;}
-#page-mod-hsuforum-discuss .discussioncontrol.movediscussion {float:right;width:auto;text-align:right;padding-right:10px;}
-#page-mod-hsuforum-discuss .discussioncontrol.movediscussion .movediscussionoption {}
+#page-mod-hsuforum-discuss .discussioncontrol select {width: 15em;}
+#page-mod-hsuforum-discuss .discussioncontrols .discussioncontrol {float: left; margin-right: 20px}
 
 /** Styles for view.php **/
 #page-mod-hsuforum-view .groupmenu {float: left;text-align:left;white-space: nowrap;}
