--- a/styles.css
+++ b/styles.css
@@ -259,7 +259,6 @@ span.unread {
 .hsuforum-thread-article,
 .hsuforum-thread-tools,
 .hsuforum-reply,
-.addpost,
 .hsuforum-thread-replies,
 .hsuforum-thread-nav{
     padding:1em 3%;
@@ -477,20 +476,19 @@ border-radius: 2px;
 /* -------------------------  MEDIA Qs  -------------------------*/
 
 /* when the screen get big (720px+ish) */
-/*
+
 @media all and (min-width: 45em) {
-*/
+
 
 /* threads n posts don't need lr padding on large screen */
-/*
+
 .hsuforum-post,
 .hsuforum-thread-article,
-.addpost,
 .hsuforum-thread-content,
 .hsuforum-thread-replies{
     padding:1.5em 0;
 }
-*/
+
 
 /* GRID ME UP */
 .hsuforum-thread-figure,
@@ -531,9 +529,30 @@ border-radius: 2px;
 .hsuforum-thread-article{width:29%;float:left;padding:1em;margin:0.5em 2%;}
 .hsuforum-thread-article article:nth-child(even) {clear:none;}
 .hsuforum-thread-article article:nth-child(3n+5) {clear:both;}
+*/
 
-*/
-/*
-} 
-*/
-/* end meida 45 */
+}
+
+/* end media 45 */
+
+/* small screen */
+@media (max-width: 700px) {
+	.mod_hsuforum_posts_container.article,
+    .hsuforum-thread-figure,
+	.hsuforum-post-figure,
+	.hsuforum-thread-body,
+	.hsuforum-post-body,
+	.hsuforum-thread-replies-meta,
+	.picwall{
+		clear:both;
+        display:block;
+		width:100%;
+		float:none;
+	}
+    .hsuforum-thread-article{
+        padding:1em 0;
+    }
+    .hsuforum-thread-content{
+        margin:0 2%;
+    }
+}
