--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,22 @@
     height:auto;
 }
 
-
-#local-joulegrader .content .mod_hsuforum_posts_container,
-#local-joulegrader .content .mod_hsuforum_posts_container .content {text-align: left; margin-right: 0; overflow: hidden;}
-#local-joulegrader .content .mod_hsuforum_posts_container {margin-right: 10px; }
+#page-local-joulegrader-view .indent {
+    border-bottom:1px solid #ccc;
+}
+#local-joulegrader .content .mod-hsuforum-posts-container,
+#local-joulegrader .content .mod-hsuforum-posts-container .content {
+    text-align: left;
+    margin-right: 0;
+    overflow: hidden;
+}
+#local-joulegrader .content .mod-hsuforum-posts-container {
+    margin: 0 4%;
+}
 
 .hsuforum_postincontext_dialog .yui3-widget-hd { cursor: move; }
+
+.modtype_hsuforum .path-course-view .unread {margin:0; clear:both;}
 
 .path-mod-hsuforum #gradetype_warning.hidden { display: none; }
 .path-mod-hsuforum #gradetype_warning { color: #660000; padding-left: 5px; }
@@ -23,15 +33,20 @@
 /* Hide things in the main view */
 .hsuforum-thread .hsuforum-footer-reply,
 .hsuforum-thread .hsuforum-thread-body,
+.hsuforum-thread .hsuforum-thread-content,
+.hsuforum-thread .hsuforum-replycount-link,
 .hsuforum-reply-wrapper + header {
     display: none;
 }
 /* Show things if thread is expaned or on single discussion page */
 #page-mod-hsuforum-discuss .hsuforum-footer-reply,
 #page-mod-hsuforum-discuss .hsuforum-thread-body,
+#page-mod-hsuforum-discuss .hsuforum-thread-content,
 .hsuforum-thread-article-expanded .hsuforum-footer-reply,
 .hsuforum-thread-article-expanded .hsuforum-thread-body,
-.forumtype-blog .hsuforum-thread-body {
+.forumtype-blog .hsuforum-thread-body,
+.forumtype-blog .hsuforum-thread-content,
+.forumtype-blog .hsuforum-replycount-link{
     display: block;
 }
 
@@ -96,9 +111,9 @@
 -------------------------*/
 
 /* borderbox reset */
-.mod_hsuforum_posts_container.article *,
-.mod_hsuforum_posts_container.article *:before,
-.mod_hsuforum_posts_container.article *:after {
+.mod-hsuforum-posts-container.article *,
+.mod-hsuforum-posts-container.article *:before,
+.mod-hsuforum-posts-container.article *:after {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -144,10 +159,6 @@
     position: relative;
 }
 
-#page-mod-hsuforum-view .groupselector{
-    display:block;
-    text-align:center;
-}
 #page-mod-hsuforum-view #selectgroup label {
     display:none;
 }
@@ -172,6 +183,13 @@
 #page-mod-hsuforum-discuss .hsuforum-thread{
     border-color:transparent;
 }
+#page-mod-hsuforum-discuss .hsuforum-thread-author,
+#page-mod-hsuforum-discuss .hsuforum-thread-header {
+    width:100%;
+    padding:0.33em 2.34%;
+}
+
+
 
 /* THREAD AND POST TITLES */
 .hsuforum-thread-title >h4 {
@@ -200,6 +218,9 @@
 }
 .hsuforum-post:hover .hsuforum-post-title{
     opacity:0.85;
+}
+.hsuforum-thread-content {
+    clear:both;
 }
 
 
@@ -247,6 +268,16 @@
 
 }
 
+.hsuforum-parent-post-link {
+border-radius: 50%;
+background-color: orange;
+display: inline-block;
+width: 1.5em;
+height:1.5em;
+margin-right:2%;
+text-align:center;
+color: white !important;
+}
 
 /* user image secions */
 .hsuforum-thread-author,
@@ -312,6 +343,9 @@
 .hsuforum-tools .hsuforum-reply-link{
     margin-left:0;
 }
+.hsuforum-tools a:not(.btn) {
+    padding: 0 0.2em;
+}
 
 
 
@@ -320,21 +354,21 @@
 /* -------------------------
 ACTIONS
 -------------------------*/
-.hsuforum_toggle {
+.hsuforum-toggle {
     display:inline-block;
     border-radius:0;
     padding:0 0.2em;
     color:white !important;
     font-family:"Roboto",'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-.hsuforum_toggle .svg-icon {
+.hsuforum-toggle .svg-icon {
     fill:#ddd;
     width: 1.3em;
     height: 1.3em;
     display:inline-block;
 }
 
-.hsuforum_toggle:hover {
+.hsuforum-toggle:hover {
     -webkit-transform: scale(1.06);
     -ms-transform: scale(1.06);
     transform: scale(1.06);
@@ -343,17 +377,17 @@ ACTIONS
     background-color:#eee;
 }
 
-.hsuforum_toggle_subscribe.hsuforum_toggled .svg-icon,
-.hsuforum_toggle_subscribe:hover .svg-icon{
-    fill:#fff200;
+.hsuforum-toggle-subscribe.hsuforum-toggled .svg-icon,
+.hsuforum-toggle-subscribe:hover .svg-icon{
+    fill:#ffac0d;
 }
 
-.hsuforum_toggle_substantive.hsuforum_toggled .svg-icon,
-.hsuforum_toggle_substantive:hover .svg-icon{
+.hsuforum-toggle-substantive.hsuforum-toggled .svg-icon,
+.hsuforum-toggle-substantive:hover .svg-icon{
     fill:#5fa9dd;
 }
-.hsuforum_toggle_bookmark.hsuforum_toggled .svg-icon,
-.hsuforum_toggle_bookmark:hover .svg-icon{
+.hsuforum-toggle-bookmark.hsuforum-toggled .svg-icon,
+.hsuforum-toggle-bookmark:hover .svg-icon{
     fill:#f05454;
 }
 
@@ -424,24 +458,12 @@ FUN WITH FORMS
 .hsuforum-validation-errors.notifyproblem {
     text-align: left;
 }
+.path-mod-hsuforum .discussioncontrols {
+    text-align:center;
+}
 
 /* -------------------------  MEDIA Qs  -------------------------*/
 
-/* when the screen get big (720px+ish) */
-/*
-@media all and (min-width: 45em) {
-*/
-
-/* threads n posts don't need lr padding on large screen */
-/*
-.hsuforum-post,
-.hsuforum-thread-article,
-.addpost,
-.hsuforum-thread-content,
-.hsuforum-thread-replies{
-    padding:1.5em 0;
-}
-*/
 @media all and (min-width: 35em) {
     #page-mod-hsuforum-view .groupselector{
         text-align:right;
@@ -489,16 +511,9 @@ FUN WITH FORMS
     .hsuforum-post-byline{
         display:inline;
     }
-    .hsuforum-parent-post-link {
-        float:left;
-        line-height:2;
-    }
 
     .hsuforum-postflagging{
         float:right;
-        /*
-        float:right;
-         margin-right:-40%; */
     }
 
     /* inscrease form with */
@@ -507,32 +522,27 @@ FUN WITH FORMS
         width:100%;
     }
 
-
-    .forumaddnew.hsuforum-add-discussion {
-        width:23.6%;
+    .hsuforum-add-discussion,
+    .hsuforum-search {
+        width:50%;
         display:inline-block;
         text-align:left;
     }
-    .hsuforum-control-options {
-        width:76.4%;
-        display:inline-block;
-    }
-    .hsuforum-search,
-    .hsuforum-discussion-sort {
-        width:50%;
-        display:inline-block;
-        float:none;
-        padding:0;
-    }
-    .hsuforum-discussion-sort{
+    .hsuforum-search {
         text-align:right;
     }
-    .hsuforum-discussion-sort input[type=submit] {
-        margin-right:0;
+    #hsuforum-filter-options {
+        text-align:right;
+    }
+    .hsuforum-discussion-sort {
+        display:inline-block;
     }
 
     #menudsortdirection + input {
         display:inline;
+    }
+    .hsuforum-parent-post-link{
+        float:left;
     }
 
 
@@ -548,28 +558,67 @@ FUN WITH FORMS
     /* .hsuforum-post[data-depth="5"] .hsuforum-post-wrapper{margin-left:36.69%;} */
 }
 
+@media all and (min-width: 62em) {
+    /* REALLY BIG SCREENS */
+    #page-mod-hsuforum-view #region-main{
+        max-width:100%;
+        padding:1em 2%;
+    }
+
+    .forumtype-single .hsuforum-thread-header,
+    .forumtype-single .hsuforum-thread-title,
+    .forumtype-single .hsuforum-thread-meta {
+        display:block;
+        width:100%;
+        float:none;
+    }
+    .forumtype-single .hsuforum-thread-meta {
+        text-align:left;
+    }
+    .forumtype-single .hsuforum-thread-participants {
+        display:inline-block;
+        margin-left:3%;
+        min-width:80%;
+    }
+
+    .forumtype-single .hsuforum-thread-replies {
+        float:right;
+        width:50%;
+    }
+}
+
+
 
 /* small screen */
 @media (max-width: 35em) {
-    .hsuforum-thread-figure,
     .hsuforum-thread-meta,
     .hsuforum-thread-replies-meta,
-	.hsuforum-post-figure,
-	.hsuforum-post-body {
+    .hsuforum-thread-figure,
+    .hsuform-post-date,
+    .hsuforum-postflagging {
 		clear:both;
         display:block;
 		width:100%;
 		float:none;
 	}
-
+    .hsuforum-post-figure{
+        float:left;
+    }
+    .hsuforum-post-figure .userpicture {
+        max-width:50px;
+    }
+    .hsuform-post-date,
+    .hsuforum-postflagging {
+        text-align:right;
+    }
 
     .hsuforum-thread{
         padding:1em 1.18%;
         margin:0 2.36%;
     }
-    .hsuforum-search,
-    .hsuforum-discussion-sort{
-        text-align:center;
+    .hsuforum-post-byline{
+        font-size:0.9em;
+        line-height:1;
     }
 }
 
@@ -596,25 +645,31 @@ FUN WITH FORMS
 .section .activity.modtype_hsuforum .activityinstance div {
     display:block; /* overwrite core shame */
 }
-.hsuforum.modtype_hsuforum .hsuforum_recent_heading {
+.block_flexpagemod_hsuforum .hsuforum-recent-heading,
+.hsuforum.modtype_hsuforum .hsuforum-recent-heading {
     font-size:1em;
     clear:both;
 }
+.block_flexpagemod_hsuforum .snap-media-object,
 .hsuforum.modtype_hsuforum .snap-media-object,
 .block_recent_activity .snap-media-object {
     margin-bottom: 0.3em;
     font-size:small;
 }
+.block_flexpagemod_hsuforum .snap-media-object,
 .hsuforum.modtype_hsuforum .snap-media-object {
     width:50%;
     float:left;
 }
 
+.block_flexpagemod_hsuforum .snap-media-object > a,
 .modtype_hsuforum .snap-media-object > a,
 .block_recent_activity .snap-media-object > a {
     text-decoration: none;
 }
 
+.format-flexpage .block_flexpagemod_hsuforum .snap-media-object > a > img,
+.block_flexpagemod_hsuforum .snap-media-object > img,
 .modtype_hsuforum .snap-media-object > a > img,
 .modtype_hsuforum .snap-media-object > img,
 .block_recent_activity .snap-media-object > a > img,
@@ -627,19 +682,23 @@ FUN WITH FORMS
     vertical-align: baseline;
 }
 
+.block_flexpagemod_hsuforum .snap-media-body,
 .activity.modtype_hsuforum .snap-media-body,
 .block_recent_activity .snap-media-body {
     overflow: hidden;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.modtype_hsuforum .snap-media-body  p,
-.block_recent_activity .snap-media-body  p {
+.block_flexpagemod_hsuforum .snap-media-body p,
+.modtype_hsuforum .snap-media-body p,
+.block_recent_activity .snap-media-body p {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
+.format-flexpage .block_flexpagemod_hsuforum .snap-media-body  h3,
+.block_flexpagemod_hsuforum .snap-media-body  h3 small,
 .modtype_hsuforum .snap-media-body  h3,
 .modtype_hsuforum .snap-media-body  h3 small,
 .block_recent_activity .snap-media-body  h3,
@@ -650,11 +709,13 @@ FUN WITH FORMS
     margin: 0;
 }
 
+.block_flexpagemod_hsuforum .snap-media-body  h3 small,
 .modtype_hsuforum .snap-media-body  h3 small,
 .block_recent_activity .snap-media-body  h3 small {
         opacity: 0.75;
 }
 
+.block_flexpagemod_hsuforum .snap-media-meta,
 .modtype_hsuforum .snap-media-meta,
 .block_recent_activity .snap-media-meta {
     display: block;
@@ -662,7 +723,33 @@ FUN WITH FORMS
     opacity: 0.75;
 }
 
+.block_flexpagemod_hsuforum .snap-media-meta  time,
 .modtype_hsuforum .snap-media-meta  time,
 .block_recent_activity .snap-media-meta  time {
     margin-right: 1em;
+}
+
+.format-flexpage  .block_flexpagemod_hsuforum .snap-media-object h3 {
+    padding: 0;
+}
+
+.modtype_hsuforum .mod-indent-outer,
+.modtype_hsuforum .activityinstance,
+.format-flexpage  .block_flexpagemod_hsuforum .mod-indent-outer,
+.format-flexpage  .block_flexpagemod_hsuforum .activityinstance {
+    display: block !important;
+}
+
+.modtype_hsuforum.activity:before,
+.modtype_hsuforum.activity:after,
+.format-flexpage  .block_flexpagemod_hsuforum li.activity:before,
+.format-flexpage  .block_flexpagemod_hsuforum li.activity:after {
+    content: "";
+    display: table;
+}
+
+.modtype_hsuforum .no-overflow,
+.modtype_hsuforum.activity:after,
+.format-flexpage  .block_flexpagemod_hsuforum li.activity:after {
+    clear: both;
 }
