--- a/styles.css
+++ b/styles.css
@@ -561,8 +561,8 @@ FUN WITH FORMS
 @media all and (min-width: 62em) {
     /* REALLY BIG SCREENS */
     #page-mod-hsuforum-view #region-main{
-        max-width:100%;
-        padding:1em 2%;
+        max-width:60.5em;
+        padding:1em 4%;
     }
 
     .forumtype-single .hsuforum-thread-header,
