--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,3 @@
-#page-mod-hsuforum-discuss strong,
-#page-mod-hsuforum-view strong {
-    font-weight:700;
-}
-
-/* all imgs responsive */
-.hsuforum-thread img {
-    max-width:100%;
-    height:auto;
-}
 
 #page-local-joulegrader-view .indent {
     border-bottom:1px solid #ccc;
@@ -24,10 +14,15 @@
 
 .hsuforum_postincontext_dialog .yui3-widget-hd { cursor: move; }
 
-.modtype_hsuforum .path-course-view .unread {margin:0; clear:both;}
+/* Activity instance has a height set to 2em. This is madness, and we need to reset it or it causes lots of issues. */
+.activity.modtype_hsuforum .activityinstance {
+    height:auto !important;
+}
+
 
 .path-mod-hsuforum #gradetype_warning.hidden { display: none; }
 .path-mod-hsuforum #gradetype_warning { color: #660000; padding-left: 5px; }
+
 
 
 /* Hide things in the main view */
@@ -83,21 +78,6 @@
     display: none;
 }
 
-/*
-.hsuforum-in-private-reply-to,
-.hsuforum-in-reply-to {
-    display: inline-block;
-    width: 12px;
-    height: 12px;
-    background: url([[pix:moodle|t/right]]) no-repeat 0 0;
-    margin-top: 0;
-}
-
-.hsuforum-in-private-reply-to {
-    background-image: url([[pix:moodle|t/locked]]);
-}
-*/
-
 #page-mod-hsuforum-view #intro.generalbox {
     border:0;
     -webkit-box-shadow:none;
@@ -129,6 +109,24 @@
     padding:0.33em 2.36%;
 }
 
+/* bold text to be bold */
+#page-mod-hsuforum-discuss strong,
+#page-mod-hsuforum-view strong {
+    font-weight:700;
+}
+
+/* header issue in express */
+.hsuforum-thread-title h4{
+    text-align:left;
+}
+
+
+/* all imgs responsive */
+.hsuforum-thread img {
+    max-width:100%;
+    height:auto;
+}
+
 
 .hsuforum-thread-article,
 .hsuforum-reply,
@@ -149,6 +147,7 @@
 #page-mod-hsuforum-search #searchform label {
     display: block;
 }
+
 /* FORUM HEADER */
 .hsuforum-search .helptooltip {
     display: none;
@@ -171,7 +170,7 @@
 .hsuforum-thread {
     border-bottom:1px solid #ddd;
     margin:0.5em 0;
-    padding:0.5em 0;
+    padding:0.5em 2.36%;
     background-color:white;
     -ms-word-break: break-all;
     word-wrap: break-word;
@@ -243,15 +242,13 @@
 .hsuforum-post{
     position:relative;
     clear:both;
-    margin-top:4em;
 }
-
 
 .hsuforum-post:before{
     content: attr(data-count);
     position: absolute;
-    top: -1em;
-    left: 0%;
+    top: 3em;
+    left: -4%;
     border-radius: 100%;
     background-color: #ddd;
     color: #FFF;
@@ -265,7 +262,10 @@
     background-color: #333;
     -webkit-transition: all .3s;
     transition: all .3s;
-
+}
+/* for focus/target spacinging in themes with a fixed header */
+.hsuforum-post-wrapper{
+    padding-top:3em;
 }
 
 .hsuforum-parent-post-link {
@@ -516,7 +516,7 @@ FUN WITH FORMS
         float:right;
     }
 
-    /* inscrease form with */
+    /* increase form with */
     .hsuforum-form input[type=text],
     .hsuforum-form textarea {
         width:100%;
@@ -530,6 +530,10 @@ FUN WITH FORMS
     }
     .hsuforum-search {
         text-align:right;
+    }
+    /* search on discuss page only for single simple discussion */
+    #page-mod-hsuforum-discuss .hsuforum-search {
+        width: 100%;
     }
     #hsuforum-filter-options {
         text-align:right;
@@ -618,28 +622,13 @@ FUN WITH FORMS
 }
 
 
-/* two col layout */
-/*
-.hsuforum-thread-article{width:46%;float:left;padding:1em;min-height:7em;margin:0.5em 2%;}
-.hsuforum-threads-wrapper article:nth-child(even) {clear:both;}
-.hsuforum-thread-replies-meta { width:auto; }
-*/
-/* three col layout */
-/*
-.hsuforum-thread-article{width:29%;float:left;padding:1em;margin:0.5em 2%;}
-.hsuforum-thread-article article:nth-child(even) {clear:none;}
-.hsuforum-thread-article article:nth-child(3n+5) {clear:both;}
-
-*/
-/*
-}
-*/
 /* end meida 45 */
 
 /* recent activity, recent posts output in non-Snap themes */
 .section .activity.modtype_hsuforum .activityinstance div {
     display:block; /* overwrite core shame */
 }
+
 .block_flexpagemod_hsuforum .hsuforum-recent-heading,
 .hsuforum.modtype_hsuforum .hsuforum-recent-heading {
     font-size:1em;
