--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,12 @@
     margin: 0 4%;
 }
 
+/* export page print styles */
+#page-mod-hsuforum-route.pagelayout-embedded a[aria-pressed="false"]{
+    display:none;
+}
+
+
 .hsuforum_postincontext_dialog .yui3-widget-hd { cursor: move; }
 
 /* Activity instance has a height set to 2em. This is madness, and we need to reset it or it causes lots of issues. */
@@ -147,6 +153,9 @@
 #page-mod-hsuforum-search #searchform label {
     display: block;
 }
+#page-mod-hsuforum-search .hsuforum-post:before {
+    display:none;
+}
 
 /* FORUM HEADER */
 .hsuforum-search .helptooltip {
@@ -172,7 +181,6 @@
     margin:0.5em 0;
     padding:0.5em 2.36%;
     background-color:white;
-    -ms-word-break: break-all;
     word-wrap: break-word;
     -webkit-hyphens: auto;
    -moz-hyphens: auto;
@@ -565,7 +573,7 @@ FUN WITH FORMS
 @media all and (min-width: 62em) {
     /* REALLY BIG SCREENS */
     #page-mod-hsuforum-view #region-main{
-        max-width:100%;
+        max-width:60.5em;
         padding:1em 2%;
     }
 
@@ -625,12 +633,14 @@ FUN WITH FORMS
 /* end meida 45 */
 
 /* recent activity, recent posts output in non-Snap themes */
+
 .section .activity.modtype_hsuforum .activityinstance div {
     display:block; /* overwrite core shame */
 }
 
 .block_flexpagemod_hsuforum .hsuforum-recent-heading,
-.hsuforum.modtype_hsuforum .hsuforum-recent-heading {
+.hsuforum.modtype_hsuforum .hsuforum-recent-heading,
+.section .activity.modtype_hsuforum .availabilityinfo {
     font-size:1em;
     clear:both;
 }
@@ -713,21 +723,20 @@ FUN WITH FORMS
     margin-right: 1em;
 }
 
-.format-flexpage  .block_flexpagemod_hsuforum .snap-media-object h3 {
+.format-flexpage .block_flexpagemod_hsuforum .snap-media-object h3 {
     padding: 0;
 }
 
-.modtype_hsuforum .mod-indent-outer,
-.modtype_hsuforum .activityinstance,
-.format-flexpage  .block_flexpagemod_hsuforum .mod-indent-outer,
-.format-flexpage  .block_flexpagemod_hsuforum .activityinstance {
+.format-flexpage  .block_flexpagemod_hsuforum .activityinstance,
+.modtype_hsuforum .activityinstance{
     display: block !important;
 }
 
 .modtype_hsuforum.activity:before,
 .modtype_hsuforum.activity:after,
 .format-flexpage  .block_flexpagemod_hsuforum li.activity:before,
-.format-flexpage  .block_flexpagemod_hsuforum li.activity:after {
+.format-flexpage  .block_flexpagemod_hsuforum li.activity:after,
+.activity.modtype_hsuforum .unread:before {
     content: "";
     display: table;
 }
@@ -736,4 +745,37 @@ FUN WITH FORMS
 .modtype_hsuforum.activity:after,
 .format-flexpage  .block_flexpagemod_hsuforum li.activity:after {
     clear: both;
+}
+
+.discussnavigation {
+    width:auto;
+}
+
+.discussnavigation:after{
+    content:'';
+    clear:both;
+    line-height:1px;
+}
+
+.discussnavigation .navigateprevious, .discussnavigation .navigatenext {
+    width:50%;
+}
+
+.discussnavigation .navigateprevious div:first-child, .discussnavigation .navigatenext div:first-child{
+    font-variant: small-caps;
+}
+
+.discussnavigation .navigateprevious {
+    text-align:left;
+    float:left;
+}
+
+.discussnavigation .navigatenext {
+    text-align:right;
+    float:right;
+}
+
+.hsuforum-threshold-blocked .hsuforum-post-figure,
+.hsuforum-threshold-blocked .hsuforum-post-body {
+    display: none;
 }
