INT-7866: add manage subscriptions link to single simple discussion

--- a/styles.css
+++ b/styles.css
@@ -796,3 +796,7 @@ FUN WITH FORMS
     display: table;
     clear: both;
 }
+
+.path-mod-hsuforum .discussioncontrols .managesubslink {
+    float: left;
+}
