--- a/styles.css
+++ b/styles.css
@@ -433,6 +433,10 @@ FUN WITH FORMS
     margin-bottom:0.5em;
 }
 
+.hsuforum-form .fitem_fdate_selector label {
+    display:inline;
+}
+
 
 .hsuforum-form .hsuforum-textarea {
     cursor: text;
