INT-7815: Move date form around instead of having it in template

--- a/styles.css
+++ b/styles.css
@@ -825,7 +825,10 @@ FUN WITH FORMS
     float: left;
 }
 
-
 .path-mod-hsuforum #id_displayperiod {
     margin-bottom:1em;
+}
+
+#dateform {
+    display:none;
 }
