--- a/templates/hsuforum_post_emaildigestbasic_htmlemail.mustache
+++ b/templates/hsuforum_post_emaildigestbasic_htmlemail.mustache
@@ -44,7 +44,7 @@
 <div>
   <a target="_blank" href="{{{ permalink }}}">{{{ subject }}}</a>
   {{# str }} bynameondate, hsuforum, {
-          "name": {{# quote }}<a target=\"_blank\" href=\"{{{ authorlink }}}\">{{ authorfullname }}</a>{{/ quote }},
+          "name": {{# quote }}<a target="_blank" href="{{{ authorlink }}}">{{ authorfullname }}</a>{{/ quote }},
           "date": {{# quote }}{{ postdate }}{{/ quote }}
       } {{/ str }}
 </div>
