--- a/templates/hsuforum_post_emaildigestfull_htmlemail.mustache
+++ b/templates/hsuforum_post_emaildigestfull_htmlemail.mustache
@@ -88,7 +88,7 @@
             </div>
             <div class="author">
                 {{# str }} bynameondate, hsuforum, {
-                        "name": {{# quote }}<a target=\"_blank\" href=\"{{{ authorlink }}}\">{{ authorfullname }}</a>{{/ quote }},
+                        "name": {{# quote }}<a target="_blank" href="{{{ authorlink }}}">{{ authorfullname }}</a>{{/ quote }},
                         "date": {{# quote }}{{ postdate }}{{/ quote }}
                     } {{/ str }}
             </div>
