--- a/styles.css
+++ b/styles.css
@@ -392,27 +392,23 @@ ACTIONS
     background-color:#eee;
 }
 
-.hsuforum-toggle-subscribe.hsuforum-toggled .svg-icon,
-.hsuforum-toggle-subscribe:hover .svg-icon,
-.hsuforum-toggle-subscribe:focus .svg-icon{
-    fill:#ffac0d;
+.hsuforum-toggle-subscribe[aria-pressed="false"] .svg-icon,
+.hsuforum-toggle-substantive[aria-pressed="false"] .svg-icon,
+.hsuforum-toggle-bookmark[aria-pressed="false"] .svg-icon {
+     fill: #ddd;
 }
 
-.hsuforum-toggle-substantive.hsuforum-toggled .svg-icon,
-.hsuforum-toggle-substantive:hover .svg-icon,
-.hsuforum-toggle-substantive:focus .svg-icon{
+.hsuforum-toggle-subscribe[aria-pressed="true"] .svg-icon {
+    fill: #ffac0d;
+}
+
+.hsuforum-toggle-substantive[aria-pressed="true"] .svg-icon {
     fill:#5fa9dd;
 }
-.hsuforum-toggle-bookmark.hsuforum-toggled .svg-icon,
-.hsuforum-toggle-bookmark:hover .svg-icon,
-.hsuforum-toggle-bookmark:focus .svg-icon{
+
+.hsuforum-toggle-bookmark[aria-pressed="true"] .svg-icon {
     fill:#f05454;
 }
-
-
-
-
-
 
 /* -------------------------
 FUN WITH FORMS
@@ -424,21 +420,21 @@ FUN WITH FORMS
 
 
 .hsuforum-form fieldset{
-    margin:0 auto;
+    margin: 0 auto;
 }
 
 .hsuforum-form legend {
-    margin:1em 0;
-    font-size:1.25em;
+    margin: 1em 0;
+    font-size: 1.25em;
 }
 
 .hsuforum-form label {
-    display:block;
-    margin-bottom:0.5em;
+    display: block;
+    margin-bottom: 0.5em;
 }
 
 .hsuforum-form .fitem_fdate_selector label {
-    display:inline;
+    display: inline;
 }
 
 .hsuforum-form .hsuforum-textarea {
@@ -456,6 +452,11 @@ FUN WITH FORMS
     background-color:white;
 }
 
+.hsuforum-post-body input[type=file] {
+    line-height: 1;
+    font-weight: normal;
+}
+
 
 .hsuforum-form .hidden {
     display: none;
@@ -468,149 +469,149 @@ FUN WITH FORMS
 
 
 .hsuforum-form button {
-    clear:both;
+    clear: both;
 }
 
 .hsuforum-use-advanced {
-    clear:both;
-    float:right;
+    clear: both;
+    float: right;
 }
 
 .hsuforum-validation-errors.notifyproblem {
     text-align: left;
 }
 .path-mod-hsuforum .discussioncontrols {
-    text-align:center;
+    text-align: center;
 }
 
 /* -------------------------  MEDIA Qs  -------------------------*/
 
 @media all and (min-width: 35em) {
     #page-mod-hsuforum-view .groupselector{
-        text-align:right;
+        text-align: right;
     }
 
     /* GRID ME UP */
     .hsuforum-thread-author{
-        width:18%;
-        margin-right:5.6%;
-        float:left;
+        width: 18%;
+        margin-right: 5.6%;
+        float: left;
     }
 
 
     .hsuforum-thread-header,
     .hsuforum-thread-title{
-        float:left;
-        width:76.4%;
+        float: left;
+        width: 76.4%;
     }
 
     .hsuforum-thread-meta{
-        float:right;
-        width:23.6%;
-        text-align:right;
+        float: right;
+        width: 23.6%;
+        text-align: right;
     }
 
     .hsuforum-post-figure {
-        float:left;
-        width:15.73%;
+        float: left;
+        width: 15.73%;
 
     }
     .hsuforum-post-body{
-        float:left;
-        width:84.27%;
+        float: left;
+        width: 84.27%;
     }
 
 
     .depth0 .hsuforum-reply-wrapper{
-        margin-left:15.73%;
+        margin-left: 15.73%;
     }
     .hsuform-post-date{
-        float:right;
-        line-height:3;
+        float: right;
+        line-height: 3;
     }
 
     .hsuforum-post-byline{
-        display:inline;
+        display: inline;
     }
 
     .hsuforum-postflagging{
-        float:right;
+        float: right;
     }
 
     /* increase form with */
     .hsuforum-form input[type=text],
     .hsuforum-form textarea {
-        width:100%;
+        width: 100%;
     }
 
     .hsuforum-add-discussion,
     .hsuforum-search {
-        width:50%;
-        display:inline-block;
-        text-align:left;
+        width: 50%;
+        display: inline-block;
+        text-align: left;
     }
     .hsuforum-search {
-        text-align:right;
+        text-align: right;
     }
     /* search on discuss page only for single simple discussion */
     #page-mod-hsuforum-discuss .hsuforum-search {
         width: 100%;
     }
     #hsuforum-filter-options {
-        text-align:right;
+        text-align: right;
     }
     .hsuforum-discussion-sort {
-        display:inline-block;
+        display: inline-block;
     }
 
     #menudsortdirection + input {
-        display:inline;
+        display: inline;
     }
     .hsuforum-parent-post-link{
-        float:left;
+        float: left;
     }
 
 
 
 
-    .hsuforum-post[data-depth] .hsuforum-post-wrapper{margin-left:31.45%;} /* max depth catch all */
+    .hsuforum-post[data-depth] .hsuforum-post-wrapper{ margin-left: 31.45%;} /* max depth catch all */
     /* 5.24 */
-    .hsuforum-post[data-depth="0"] .hsuforum-post-wrapper{margin-left:0%;}
-    .hsuforum-post[data-depth="1"] .hsuforum-post-wrapper{margin-left:15.73%;}
-    .hsuforum-post[data-depth="2"] .hsuforum-post-wrapper{margin-left:20.97%;}
-    .hsuforum-post[data-depth="3"] .hsuforum-post-wrapper{margin-left:26.21%;}
-    .hsuforum-post[data-depth="4"] .hsuforum-post-wrapper{margin-left:31.45%;}
+    .hsuforum-post[data-depth="0"] .hsuforum-post-wrapper{ margin-left: 0%;}
+    .hsuforum-post[data-depth="1"] .hsuforum-post-wrapper{ margin-left: 15.73%;}
+    .hsuforum-post[data-depth="2"] .hsuforum-post-wrapper{ margin-left: 20.97%;}
+    .hsuforum-post[data-depth="3"] .hsuforum-post-wrapper{ margin-left: 26.21%;}
+    .hsuforum-post[data-depth="4"] .hsuforum-post-wrapper{ margin-left: 31.45%;}
     /* .hsuforum-post[data-depth="5"] .hsuforum-post-wrapper{margin-left:36.69%;} */
 }
 
 @media all and (min-width: 62em) {
     /* REALLY BIG SCREENS */
     #page-mod-hsuforum-view #region-main{
-        max-width:60.5em;
-        padding:1em 2%;
+        max-width: 60.5em;
+        padding: 1em 2%;
     }
 
     .forumtype-single .hsuforum-thread-header,
     .forumtype-single .hsuforum-thread-title,
     .forumtype-single .hsuforum-thread-meta {
-        display:block;
-        width:100%;
-        float:none;
+        display: block;
+        width: 100%;
+        float: none;
     }
     .forumtype-single .hsuforum-thread-meta {
-        text-align:left;
+        text-align: left;
     }
     .forumtype-single .hsuforum-thread-participants {
-        display:inline-block;
-        margin-left:3%;
-        min-width:80%;
+        display: inline-block;
+        margin-left: 3%;
+        min-width: 80%;
     }
 
 
     /* recent activity on course page in snap themes */
     #region-main .snap-activity.modtype_hsuforum .snap-media-object{
-        width:50%;
-        float:left;
+        width: 50%;
+        float: left;
     }
 }
 
@@ -623,29 +624,33 @@ FUN WITH FORMS
     .hsuforum-thread-figure,
     .hsuform-post-date,
     .hsuforum-postflagging {
-		clear: both;
-    display: block;
-		width: 100%;
-		float: none;
-	}
+        clear: both;
+        display: block;
+        width: 100%;
+        float: none;
+    }
+
     .hsuforum-post-figure{
-        float:left;
+        float: left;
     }
+
     .hsuforum-post-figure .userpicture {
-        max-width:50px;
+        max-width:  50px;
     }
+
     .hsuform-post-date,
     .hsuforum-postflagging {
-        text-align:right;
+        text-align: right;
     }
 
     .hsuforum-thread{
-        padding:1em 1.18%;
-        margin:0 2.36%;
+        padding: 1em 1.18%;
+        margin: 0 2.36%;
     }
+
     .hsuforum-post-byline{
-        font-size:0.9em;
-        line-height:1;
+        font-size: 0.9em;
+        line-height: 1;
     }
 }
 
@@ -656,22 +661,22 @@ FUN WITH FORMS
 /* recent activity, recent posts output in non-Snap themes */
 .editing .sitetopic .section .activity.modtype_hsuforum .activityinstance,
 .editing .course-content .section .activity.modtype_hsuforum .activityinstance {
-  padding-right:0;
-  width:90%;
+    padding-right: 0;
+    width: 90%;
 }
 
 
 .block_flexpagemod_hsuforum .hsuforum-recent-heading,
 .hsuforum.modtype_hsuforum .hsuforum-recent-heading,
 .section .activity.modtype_hsuforum .availabilityinfo {
-    font-size:1em;
-    clear:both;
+    font-size: 1em;
+    clear: both;
 }
 .block_flexpagemod_hsuforum .snap-media-object,
 .hsuforum.modtype_hsuforum .snap-media-object,
 .block_recent_activity .snap-media-object {
     margin-bottom: 0.3em;
-    font-size:small;
+    font-size: small;
     width: 310px;
 }
 
@@ -699,7 +704,7 @@ FUN WITH FORMS
 .activity.modtype_hsuforum .snap-media-body,
 .block_recent_activity .snap-media-body {
     overflow: hidden;
-    width:240px;
+    width: 240px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     display: block !important;
 }
@@ -779,17 +784,17 @@ FUN WITH FORMS
 }
 
 .discussnavigation {
-    width:auto;
+    width: auto;
 }
 
 .discussnavigation:after{
-    content:'';
-    clear:both;
-    line-height:1px;
+    content: '';
+    clear: both;
+    line-height: 1px;
 }
 
 .discussnavigation .navigateprevious, .discussnavigation .navigatenext {
-    width:50%;
+    width: 50%;
 }
 
 .discussnavigation .navigateprevious div:first-child, .discussnavigation .navigatenext div:first-child{
@@ -797,13 +802,13 @@ FUN WITH FORMS
 }
 
 .discussnavigation .navigateprevious {
-    text-align:left;
-    float:left;
+    text-align: left;
+    float: left;
 }
 
 .discussnavigation .navigatenext {
-    text-align:right;
-    float:right;
+    text-align: right;
+    float: right;
 }
 
 .hsuforum-threshold-blocked .hsuforum-post-figure,
@@ -826,7 +831,7 @@ FUN WITH FORMS
 }
 
 .path-mod-hsuforum #id_displayperiod {
-    margin-bottom:1em;
+    margin-bottom: 1em;
 }
 
 #discussion_dateform {
@@ -834,7 +839,7 @@ FUN WITH FORMS
 }
 
 .dateformtarget {
-    margin-bottom:1em;
+    margin-bottom: 1em;
 }
 
 .timedpost.smallicon {
