--- a/templates/hsuforum_post_email_textemail.mustache
+++ b/templates/hsuforum_post_email_textemail.mustache
@@ -30,7 +30,7 @@
     * forumname
     * showdiscussionname
     * discussionname
-    * discussionlink
+    * permalink
     * subject
     * authorfullname
     * postdate
@@ -42,8 +42,8 @@
     * unsubscribediscussionlink
     * forumindexlink
 }}
-{{{ coursename }}} -> {{# str }} forums, forum {{/ str }} -> {{{ forumname }}}{{# showdiscussionname }} -> {{{ discussionname }}} {{/ showdiscussionname }}
-{{ discussionlink }}
+{{{ coursename }}} -> {{# str }} forums, hsuforum {{/ str }} -> {{{ forumname }}}{{# showdiscussionname }} -> {{{ discussionname }}} {{/ showdiscussionname }}
+{{ permalink }}
 {{{ subject }}}
 {{# str }} bynameondate, hsuforum, {
         "name": {{# quote }}{{{ authorfullname }}}{{/ quote }},
